; ModuleID = '/home/carl/AnghaBench/postgres/contrib/sepgsql/extr_relation.c_sepgsql_index_modify.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/sepgsql/extr_relation.c_sepgsql_index_modify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IndexRelationId = common dso_local global i32 0, align 4
@AccessShareLock = common dso_local global i32 0, align 4
@IndexRelidIndexId = common dso_local global i32 0, align 4
@Anum_pg_index_indrelid = common dso_local global i32 0, align 4
@Anum_pg_index_indexrelid = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @sepgsql_index_modify to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sepgsql_index_modify(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @IndexRelationId, align 4
  %5 = load i32, i32* @AccessShareLock, align 4
  %6 = call i32 @table_open(i32 %4, i32 %5)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = load i32, i32* @IndexRelidIndexId, align 4
  %9 = load i32, i32* %2, align 4
  %10 = load i32, i32* @Anum_pg_index_indrelid, align 4
  %11 = load i32, i32* @Anum_pg_index_indexrelid, align 4
  %12 = call i32 @sepgsql_relation_setattr_extra(i32 %7, i32 %8, i32 %9, i32 %10, i32 %11)
  %13 = load i32, i32* %3, align 4
  %14 = load i32, i32* @AccessShareLock, align 4
  %15 = call i32 @table_close(i32 %13, i32 %14)
  ret void
}

declare dso_local i32 @table_open(i32, i32) #1

declare dso_local i32 @sepgsql_relation_setattr_extra(i32, i32, i32, i32, i32) #1

declare dso_local i32 @table_close(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
